# a2ml-rs

./: CHANGELOG.md  Cargo.toml  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  idrisiser.toml  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
benches/: a2ml_bench.rs
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
idrisiser/: parser.tsig  round-trip.tsig  types.tsig
src/: error.rs  lib.rs  parser.rs  renderer.rs  types.rs
tests/: aspect_test.rs  e2e_test.rs  property_test.rs
