# SPDX-License-Identifier: MPL-2.0
# (PMPL-1.0-or-later preferred; MPL-2.0 required for crates.io)

[package]
name = "a2ml"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
description = "Parser and renderer for A2ML (Attested Markup Language)"
repository = "https://github.com/hyperpolymath/a2ml-rs"
homepage = "https://github.com/hyperpolymath/a2ml-rs"
documentation = "https://docs.rs/a2ml"
keywords = ["a2ml", "attestation", "markup", "parser", "ai-agent"]
categories = ["parser-implementations", "data-structures"]
readme = "README.adoc"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = { version = "1", optional = true }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "a2ml_bench"
harness = false

[features]
default = []
serde_derive = ["dep:serde_derive"]
